fix: use endpoint names in schema
